--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -15,10 +15,7 @@ builds:
       - windows
       - darwin
 archives:
-  - replacements:
-      386: i386
-      amd64: x86_64
-    format_overrides:
+  - format_overrides:
       - goos: windows
         format: zip
     name_template: "localizely_cli_{{ .Os }}_{{ .Arch }}"
